# ffmpeg-ffi

./: .gitignore  .tool-versions  0-AI-MANIFEST.a2ml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXPLAINME.adoc  Justfile  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README.adoc  README.md  SECURITY.md  TEST-NEEDS.md  TOPOLOGY.md  build.zig  flake.nix  guix.scm  llm-warmup-dev.md  llm-warmup-user.md  setup.sh  stapeln.toml
.github/: CODEOWNERS
.github/workflows/: casket-pages.yml
.hypatia/: activity.jsonl  last-visit.json
.machine_readable/: ADJUST.contractile  CLADE.a2ml  INTENT.contractile  MUST.contractile  STATE.a2ml  STATE.scm  TRUST.contractile
.machine_readable/6a2/: ECOSYSTEM.a2ml  META.a2ml  STATE.a2ml
.machine_readable/6scm/: ECOSYSTEM.scm
.machine_readable/anchors/: ANCHOR.a2ml
.machine_readable/contractiles/: Justfile
.machine_readable/contractiles/bust/: Bustfile.a2ml
.well-known/: ai.txt  humans.txt  security.txt
contractiles/intend/: Intentfile.a2ml
contractiles/must/: Mustfile.a2ml
contractiles/trust/: Trustfile.a2ml
docs/: CITATIONS.adoc  tech-debt-2026-05-26.md
examples/: probe.zig
ffi/zig/: build.zig
ffi/zig/src/: main.zig
ffi/zig/test/: integration_test.zig
shim/: Cargo.toml
shim/src/: lib.rs
src/: main.zig
src/abi/: Foreign.idr  Layout.idr  Types.idr
