# SPDX-License-Identifier: MPL-2.0
[package]
name = "ffmpeg-shim"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
# (MPL-2.0 preferred; MPL-2.0 required for crates.io/Rust ecosystem)
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
description = "Rust shim exposing FFmpeg struct accessors via C ABI"
repository = "https://github.com/hyperpolymath/ffmpeg-ffi"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
ffmpeg-sys-next = "7"

[build-dependencies]
# No bindgen needed - ffmpeg-sys-next includes bindings
